# wavelet

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  build.sh  build_installer.bat  installer.iss
gui/: app.manifest  app.rc  image_io.c  image_io.h  main.c  png.c  png.h
include/: wavelet.h
src/: cli.c  wavelet.c
test/: test.c
tools/: make_logo.py
